--- a/nav.css
+++ b/nav.css
@@ -16,6 +16,7 @@ ol, ul {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .breadcrumbs {
