--- a/navbox.css
+++ b/navbox.css
@@ -1,6 +1,5 @@
 .ancestors-nav {
     position: relative;
-    z-index: 1;
     background: white;
     float: left;
 }
